--- a/assets/base.css
+++ b/assets/base.css
@@ -1,21 +1,535 @@
+@charset "UTF-8";
+:root {
+  --minima-property--nav: 4.5rem;
+  --minima-property--container: 1280px;
+  --minima-property--gap: 1rem;
+  --minima-property--gap-half: 0.5rem;
+  --minima-property--radius: 4px;
+  --minima-color--grey-000: #1E2227;
+  --minima-color--grey-100: #272D33;
+  --minima-color--grey-200: #363A42;
+  --minima-color--grey-300: #7F8091;
+  --minima-color--grey-400: #AAB2C7;
+  --minima-color--white: #FFFFFF;
+  --minima-color--black: #000000;
+  --minima-color--teal: #30C8C9;
+}
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+	 ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+
+/* Sections
+	 ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+	 ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+/* Text-level semantics
+	 ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+	 ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+	 ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *		`fieldset` elements in all browsers.
+ */
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type=checkbox],
+[type=radio] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+/* Interactive
+	 ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+	 ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
 html {
   font-size: 16px;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
+body {
+  line-height: 1.4;
+  font-family: "GT Walsheim Pro", sans-serif;
+}
 @media only screen and (prefers-color-scheme: no-preference), (prefers-color-scheme: light) {
   body {
     background-color: white;
+    color: black;
   }
 }
 @media only screen and (prefers-color-scheme: dark) {
   body {
-    background-color: black;
+    background-color: #201e20;
+    color: white;
   }
 }
 
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+  image-rendering: auto;
+}
+
+picture {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+svg {
+  fill: currentColor;
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  margin: unset;
+  margin-bottom: var(--minima-property--gap, 1rem);
+}
+
+h1, .heading--1 {
+  font-size: 3rem;
+  font-size: clamp(3rem, 3rem, calc(3rem * 1.25));
+}
+
+h2, .heading--2 {
+  font-size: 2.25rem;
+  font-size: clamp(2.25rem, 2.25rem, calc(2.25rem * 1.25));
+}
+
+h3, .heading--3 {
+  font-size: 2rem;
+  font-size: clamp(2rem, 2rem, calc(2rem * 1.25));
+}
+
+h4, .heading--4 {
+  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 1.5rem, calc(1.5rem * 1.25));
+}
+
+h5, .heading--5 {
+  font-size: 1.25rem;
+  font-size: clamp(1.25rem, 1.25rem, calc(1.25rem * 1.25));
+}
+
+h6, .heading--6 {
+  font-size: 1rem;
+  font-size: clamp(1rem, 1rem, calc(1rem * 1.25));
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  font-size: clamp(1rem, -1rem + 2.5vw, calc(1rem * 1.25));
+  overflow-wrap: break-word;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+  margin: unset;
+}
+p + p,
+p + ul,
+p + ol {
+  margin-top: var(--minima-property--gap, 1rem);
+}
+p + h1, p + .h1,
+p + h2, p + .h2,
+p + h3, p + .h3,
+p + h4, p + .h4,
+p + h5, p + .h5,
+p + h6, p + .h6 {
+  margin-top: calc(var(--minima-property--gap, 1rem) * 2);
+}
+p a[href]:not([href=""]):not([href^=\#]) {
+  text-decoration: underline;
+}
+article ul,
+article ol,
+article picture,
+article table,
+article figure,
+article blockquote {
+  margin-bottom: var(--minima-property--gap, 1rem);
+}
+
+ul,
+ol {
+  padding: unset;
+  padding-left: var(--minima-property--gap-half, 0.5rem);
+  list-style: none;
+}
+ul li,
+ol li {
+  position: relative;
+  padding-left: var(--minima-property--gap, 1rem);
+}
+ul li ul,
+ul li ol,
+ol li ul,
+ol li ol {
+  margin-top: var(--minima-property--gap-half, 0.5rem);
+  margin-bottom: var(--minima-property--gap-half, 0.5rem);
+}
+ul li:before,
+ol li:before {
+  content: "•";
+  margin-left: calc(var(--minima-property--gap, 1rem) * -1);
+  margin-right: var(--minima-property--gap-half, 0.5rem);
+}
+ul li:not(:last-of-type),
+ol li:not(:last-of-type) {
+  margin-bottom: var(--minima-property--gap-half, 0.5rem);
+}
+
+ol li {
+  counter-increment: ol;
+}
+ol li:before {
+  content: counter(ol) ".";
+}
+
+.container {
+  width: 100%;
+  max-width: var(--minima-property--container, 1280px);
+  margin-inline: auto;
+  padding-inline: 5vw;
+}
+
+.icon {
+  width: clamp(1.25rem, 2vw, 1.75rem);
+}
+.icon--large {
+  width: clamp(1.5rem, 3vw, 3vw);
+}
+
+.button,
+button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: var(--minima-property--gap-half, 0.5rem);
+  padding: var(--minima-property--gap-half, 0.5rem) var(--minima-property--gap, 1rem);
+  border: unset;
+}
+@media only screen and (prefers-color-scheme: no-preference), (prefers-color-scheme: light) {
+  .button,
+button {
+    background-color: var(--minima-color--black, #000000);
+    color: var(--minima-color--white, #FFFFFF);
+  }
+}
+@media only screen and (prefers-color-scheme: dark) {
+  .button,
+button {
+    background-color: var(--minima-color--white, #FFFFFF);
+    color: var(--minima-color--black, #000000);
+  }
 }
