--- a/assets/base.scss
+++ b/assets/base.scss
@@ -1,4 +1,55 @@
+// Theme name
+$name: 'minima';
+
+// Set the suffix of specific types
+$theme: (
+    properties: '--' + $name + '-property',
+    colors: '--' + $name + '-color'
+);
+
+$breakpoints: (
+    xs: 499px,
+    sm: 500px,
+    md: 700px,
+    lg: 900px,
+    xl: 1200px,
+    xxl: 1280px
+);
+
+$colors: (
+	grey-000: #1E2227,
+	grey-100: #272D33,
+	grey-200: #363A42,
+	grey-300: #7F8091,
+	grey-400: #AAB2C7,
+	white: #FFFFFF,
+	black: #000000,
+    teal: #30C8C9
+);
+
+$properties: (
+	nav: 4.5rem,
+    container: nth(map-values($breakpoints), -1),
+    gap: 1rem,
+    gap-half: 0.5rem,
+    radius: 4px
+);
+
+:root {
+    // Properties
+    @each $key, $value in $properties {
+        #{map-get($theme, properties) + '--' + $key}: #{$value};
+    }
+
+    // Colors
+    @each $key, $value in $colors {
+        #{map-get($theme, colors) + '--' + $key}: $value;
+    }
+}
+
+@import 'partial/normalize';
 @import 'partial/mixin';
+@import 'partial/function';
 
 html {
     font-size: 16px;
@@ -7,16 +58,36 @@ html {
 }
 
 body {
+    line-height: 1.4;
+    font-family: 'GT Walsheim Pro', sans-serif;
 
     @include theme(light) {
         background-color: white;
+        color: black;
     }
 
     @include theme(dark) {
-        background-color: black;
+        background-color: #201e20;
+        color: white;
     }
 }
 
 * {
     box-sizing: border-box;
 }
+
+img {
+    width: 100%;
+    image-rendering: auto; // https://twitter.com/Insharamin/status/1399231175013531656
+}
+
+picture {
+    display: flex;
+}
+
+svg {
+    fill: currentColor;
+}
+
+@import 'partial/typography';
+@import 'partial/components';
