--- a/pages/article/article.css
+++ b/pages/article/article.css
@@ -45,6 +45,20 @@
   --minima-font-body: "untitled_sansregular", "Gotham", "Helvetica", "Arial", sans-serif;
 }
 
+@font-face {
+  font-family: "untitled_sansregular";
+  src: url("/assets/fonts/untitled_sans_regular-webfont.woff2") format("woff2"), url("fonts/untitled_sans_regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-named-instance: "Regular";
+}
+@font-face {
+  font-family: "untitled_sansbold";
+  src: url("/assets/fonts/untitled_sans_bold-webfont.woff2") format("woff2"), url("fonts/untitled_sans_bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: bold;
+  font-named-instance: "Bold";
+}
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -52,7 +66,8 @@ html {
   font-size: clamp(16px, 0.75rem + 1vw, 20px);
   scrollbar-width: thin;
   scrollbar-color: var(--minima-color-primary, #F97200) var(--minima-color-background, #1A1A1A);
-  scroll-padding-top: var(--minima-property-spacer-xl, 4rem);
+  scroll-padding-top: var(--minima-property-spacer-xxl, 8rem);
+  scroll-padding-bottom: var(--minima-property-spacer-xxl, 8rem);
   scrollbar-gutter: stable;
   font-family: var(--minima-font-body, "untitled_sansregular", "Gotham", "Helvetica", "Arial", sans-serif);
   color-scheme: dark light;
@@ -177,7 +192,7 @@ h6 {
 }
 
 h1 {
-  font-size: 1.875rem;
+  font-size: 2.125rem;
 }
 
 h2 {
@@ -378,11 +393,6 @@ form {
 article {
   position: relative;
 }
-article * {
-  -webkit-hyphens: none;
-      -ms-hyphens: none;
-          hyphens: none;
-}
 article :where(h1, h2, h3, h4, h5, h6) a:hover {
   text-decoration: none;
 }
@@ -394,6 +404,13 @@ article h5,
 article h6 {
   color: var(--minima-color-title, #FFFFFF);
   margin-top: unset;
+}
+article h2,
+article h3,
+article h4,
+article h5,
+article h6 {
+  margin-top: var(--minima-property-spacer-lg, 2rem);
 }
 article p {
   margin-bottom: var(--minima-property-spacer-md, 1rem);
@@ -439,12 +456,14 @@ article figure {
   margin-right: unset;
 }
 article figcaption {
-  margin-top: var(--minima-property-spacer-sm, 0.5rem);
+  margin-top: var(--minima-property-spacer-md, 1rem);
   font-size: 0.875rem;
 }
 article blockquote {
   color: var(--minima-color-primary, #F97200);
-  margin-left: var(--minima-property-spacer-lg, 2rem);
+  border-left: var(--minima-property-spacer-xs, 0.25rem) solid var(--minima-color-primary, #F97200);
+  padding-left: var(--minima-property-spacer-lg, 2rem);
+  margin-left: unset;
   margin-right: var(--minima-property-spacer-lg, 2rem);
 }
 article blockquote p {
@@ -500,6 +519,9 @@ article table td:not(:last-of-type) {
 article table tr {
   border-bottom: 1px solid var(--minima-color-grey-200, #363A42);
 }
+article picture {
+  position: relative;
+}
 
 section.container {
   display: -ms-grid;
@@ -528,7 +550,7 @@ section.container > aside {
   }
 }
 
-.summary {
+.dek {
   font-size: 1.125rem;
 }
 
@@ -580,17 +602,70 @@ section.container > aside {
   }
 }
 
-article:after {
-  width: 120%;
-  height: 10vh;
-  content: "";
-  position: sticky;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-transform: translateX(-10%);
-          transform: translateX(-10%);
-  bottom: 0;
-  background: -webkit-gradient(linear, left bottom, left top, from(#1a1a1a), to(rgba(26, 26, 26, 0)));
-  background: linear-gradient(0deg, #1a1a1a 0%, rgba(26, 26, 26, 0) 100%);
+.related {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: var(--minima-property-spacer-md, 1rem);
+  gap: var(--minima-property-spacer-md, 1rem);
+  -ms-grid-columns: 1fr var(--minima-property-spacer-md, 1rem) min(25vw, var(--minima-property-spacer-xl, 4rem));
+  grid-template-columns: 1fr min(25vw, var(--minima-property-spacer-xl, 4rem));
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.related__picture {
+  aspect-ratio: 1/1;
+  position: relative;
+}
+.related__picture img,
+.related__picture source {
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+@supports not (inset: 0) {
+  .related__picture img,
+.related__picture source {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+}
+@supports (inset: 0) {
+  .related__picture img,
+.related__picture source {
+    inset: 0;
+  }
+}
+.related__title {
+  margin: unset;
+  font-size: 1.125rem;
+  display: -ms-grid;
+  display: grid;
+  grid-gap: unset;
+  gap: unset;
+}
+
+article {
+  background-color: var(--minima-color-background, #1A1A1A);
+  margin-bottom: var(--minima-property-spacer-xl, 4rem);
+  padding-top: var(--minima-property-container-padding, 7.5vw);
+  border-top-left-radius: var(--minima-property-spacer-sm, 0.5rem);
+  border-top-right-radius: var(--minima-property-spacer-sm, 0.5rem);
+}
+
+.meta {
+  margin-top: unset;
+}
+
+#nav {
+  width: 100%;
+  height: 3rem;
+  background-color: grey;
+  top: 0;
+  position: fixed;
+  z-index: 9;
 }
