--- a/base.scss
+++ b/base.scss
@@ -285,3 +285,22 @@ input[type=number] {
 form {
     @include grid(property(spacer-md));
 }
+
+.test {
+
+    @include breakpoint-up(md) {
+        color: red;
+    }
+
+    @include breakpoint-down(md) {
+        color: blue;
+    }
+
+    @include breakpoint-only(md) {
+        color: orange;
+    }
+
+    @include breakpoint-between(md, xl) {
+        color: green;
+    }
+}
