--- a/minima/_mixins.scss
+++ b/minima/_mixins.scss
@@ -11,7 +11,7 @@
         }
     }
     @else {
-        @error 'Theme \'#{$scheme}\' is invalid or not defined';
+        @error 'Theme \'#{$scheme}\' is invalid or, please use either "light" or "dark"';
     }
 }
 
@@ -110,7 +110,7 @@
         }
     }
     @else {
-        @error "Property '#{$width}' is not defined in $breakpoints array";
+        @error "Property '#{$width}' does not exist in $breakpoint";
     }
 }
 
@@ -125,43 +125,41 @@
         }
     }
     @else {
+        @error "Property '#{$width}' does not exist in $breakpoint";
+    }
+}
+
+@mixin breakpoint-only($width) {
+
+    // Check if breakpoint exists
+    @if map-has-key($breakpoints, $width) {
+
+        $total: length($breakpoints);
+        $next: index(map-keys($breakpoints), $width) + 1;
+
+        @if $next == 2 {
+            @media only screen and (max-width: #{map-get($breakpoints, $width)}) {
+                @content;
+            }
+        }
+        @else if $next <= $total and $next > 2 {
+            $value: nth(map-values($breakpoints), $next);
+            @media only screen and (min-width: #{map-get($breakpoints, $width)}) and (max-width: #{$value}) {
+                @content;
+            }
+        }
+        @else if $next > $total {
+            @media only screen and (min-width: #{map-get($breakpoints, $width)}) {
+                @content;
+            }
+        }
+    }
+    @else {
         @error "Property '#{$width}' is not defined in $breakpoints array";
     }
 }
 
-/* Pending removal: never used, and not immediately obvious/logical what direction this goes (up for reference, so lg would cover the width between breakpoint lg and xl) */
-// @mixin breakpoint-only($width) {
-// 
-//     // Check if breakpoint exists
-//     @if map-has-key($breakpoints, $width) {
-// 
-//         $total: length($breakpoints);
-//         $next: index(map-keys($breakpoints), $width) + 1;
-// 
-//         @if $next == 2 {
-//             @media only screen and (max-width: #{map-get($breakpoints, $width)}) {
-//                 @content;
-//             }
-//         }
-//         @else if $next <= $total and $next > 2 {
-//             $value: nth(map-values($breakpoints), $next);
-//             @media only screen and (max-width: #{$value}) and (min-width: #{map-get($breakpoints, $width)}) {
-//                 @content;
-//             }
-//         }
-//         @else if $next > $total {
-//             @media only screen and (min-width: #{map-get($breakpoints, $width)}) {
-//                 @content;
-//             }
-//         }
-//     }
-//     @else {
-//         @error "Property '#{$width}' is not defined in $breakpoints array";
-//     }
-// }
-
-/* Pending: rarely used, generally you should never have specific CSS for a given range unless there is an extreme edge case, instead you should be using a breakpoint for each step a change is required */
-@mixin breakpoint-range($start, $end) {
+@mixin breakpoint-between($start, $end) {
 
     // Check if breakpoint exists
     @if map-has-key($breakpoints, $start) and map-has-key($breakpoints, $end) {
