--- a/pages/navigation/navigation.scss
+++ b/pages/navigation/navigation.scss
@@ -301,6 +301,12 @@ body.lock {
                 }
             }
 
+            @include breakpoint-down(lg) {
+                img {
+                    @include hidden;
+                }
+            }
+
             &__icon {
                 display: inline-block;
                 vertical-align: middle;
