--- a/pages/navigation/navigation.css
+++ b/pages/navigation/navigation.css
@@ -63,9 +63,9 @@ html {
   font-size: clamp(16px, 0.75rem + 1vw, 20px);
   scrollbar-width: thin;
   scrollbar-color: var(--minima-color-primary, #F97200) var(--minima-color-background, #1A1A1A);
+  scrollbar-gutter: stable;
   scroll-padding-top: var(--minima-property-spacer-xxl, 8rem);
   scroll-padding-bottom: var(--minima-property-spacer-xxl, 8rem);
-  scrollbar-gutter: stable;
   font-family: var(--minima-font-body, "untitled_sansregular", "Gotham", "Helvetica", "Arial", sans-serif);
   color-scheme: dark light;
 }
@@ -734,6 +734,12 @@ body.lock {
     position: absolute;
     inset: 0;
     z-index: var(--minima-property-layer-background, -1);
+  }
+}
+@media only screen and (max-width: 991px) {
+  .main-navigation__links__link img {
+    display: none;
+    visibility: hidden;
   }
 }
 .main-navigation__links__link__icon {
